<resources>
    <string name="app_name">SVJ</string>

    <string name="username_hint"><font size="13">username</font></string>
    <string name="password_hint"><font size="13">password</font></string>
    <string name="login"><font size="16">Log In</font></string>
    <string name="builders_registration"><font size="16">Builder\'s Registration</font></string>

    <string name="title_activity_onetimeopening">onetimeopening</string>
    <string name="admin">Admin</string>
    <string name="engineer">Engineer</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="addsite">Add Site</string>
    <string name="addMember">Add Member</string>
    <string name="deleteEngineer">Delete Engineer</string>
    <string name="locate">Locate</string>
    <string name="constructiontype">ConstructionType</string>
    <string name="nameofsite">Site Name</string>
    <string name="areaofsite">Site Location</string>
    <string name="nameofEngineer">Engineer Name</string>
    <string name="createnewsite">Create</string>
    <string name="setEngineerPassword"><font size="16">EngineerPassword</font></string>
    <string name="todaysmanpower">Manpower used today</string>
    <string name="sendtoAdmin">Send To Admin</string>
    <string name="numofPeople"><font size="15">People</font></string>
    <string name="hint_to_set_engineer_username"><font size="15">set username for engineer</font></string>
    <string name="hint_to_set_engineer_password"><font size="15">set password for engineer</font></string>
    <string name="hint_to_add_name_of_site"><font size="15">Enter Name Of Site</font></string>
    <string name="hint_to_add_area_of_site"><font size="15">Enter Area Of Site</font></string>
    <string name="sitereport"><font size="18">Site Report</font></string>
    <string name="reporttitle"><font size="13">Report Title</font></string>
    <string name="hint_for_report_title"><font size="15">Enter Report Title</font></string>
    <string name="reportdiscription"><font size="13">Report Description</font></string>
    <string name="hint_for_report_discription"><font size="15">Enter Description</font></string>
    <string name="add_another_vehicle"><font size="13">Add vehicle</font></string>
    <string name="start_the_chat"><font size="13">Let\'s start the chat</font></string>
    <string name="vehicle"><font size="13">Vehicle</font></string>
    <string name="hint_to_add_vehicle_used"><font size="15">Enter vehicle used with NumberPlate</font></string>
    <string name="initialreading"><font size="13">Initial Reading</font></string>
    <string name="hint_to_add_initial_reading"><font size="15">Enter initial reading</font></string>
    <string name="finalreading"><font size="13">Final Reading</font></string>
    <string name="hint_to_add_final_reading"><font size="15">Enter final reading</font></string>
    <string name="snc_previous"><font size="15">Since Previous</font></string>
    <string name="uptodate"><font size="15">UpToDate</font></string>


    <string name="enterprise_name">Enterprise name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="register"><font size="16">Register</font></string>
    <string name="app_global_name">Construe</string>
    <string name="already_member"><font size="16">Already a member? Log In</font></string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>


</resources>
