<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".Add_Member">

    <EditText
        android:id="@+id/usernameaddMember"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/edittext_theme"
        android:hint="@string/username_hint"
        android:maxLines="1"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/brown_800"
        android:textColorHint="@color/purple_900" />

    <EditText
        android:id="@+id/passwordaddMember"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/edittext_theme"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/brown_800"
        android:textColorHint="@color/purple_900" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="36dp"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/adminaddMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/admin" />

        <RadioButton
            android:id="@+id/engineeraddMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/engineer" />
    </RadioGroup>

    <Button
        android:id="@+id/addMember_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_theme"
        android:text="@string/addMember"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/light_green_900"

        />




</LinearLayout>