<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg_2"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/app_global_name"
                android:textAlignment="center"
                android:textColor="@color/red_500"
                android:textSize="@dimen/app_name_size"
                android:textStyle="italic" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#263238"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
            to prevent the dummy from receiving focus again -->
            <AutoCompleteTextView
                android:id="@+id/autotext"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:nextFocusLeft="@id/edit_text_enterprisename"
                android:nextFocusUp="@id/edit_text_enterprisename" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/edit_text_enterprisename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_name"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:drawableStart="@drawable/ic_name"
                    android:hint="@string/enterprise_name"
                    android:inputType="text"
                    android:nextFocusDown="@id/edit_text_email"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorHint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@id/edit_text_password"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                 <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:nextFocusDown="@id/button_register"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint" />
             </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                 <EditText
                android:id="@+id/edit_text_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="@dimen/drawable_padding"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="10"
                android:nextFocusDown="@id/button_register"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint" />
            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_theme"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/already_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_theme"
                android:text="@string/already_member"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:layout_marginTop="8dp"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>