<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sitereport">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/sitereport_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_theme"
            android:text="@string/sitereport"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/light_green_900" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/areaofsite"
            android:textColorHighlight="@color/pink_200"
            android:textStyle="bold"
            android:layout_gravity="start"
            />

        <EditText
            android:id="@+id/ent_rpt_sitelocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:hint="@string/hint_to_add_area_of_site"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="18sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:text="@string/reportdiscription"
            android:textColorHighlight="@color/pink_200"
            android:textStyle="bold"
            android:layout_gravity="start"
            />

        <EditText
            android:id="@+id/ent_rpt_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:gravity="start"
            android:hint="@string/hint_for_report_discription"
            android:inputType="textMultiLine"
            android:maxLines="8"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/sitereportimage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:adjustViewBounds="true"
            android:scaleType="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/constructiontype" />

            <Spinner
                android:id="@+id/simpleSpinner_in_sitereport"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/material" />

            <Spinner
                android:id="@+id/simpleSpinner_material"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/specificmaterial"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp" />

            <Spinner
                android:id="@+id/simpleSpinner_specificmaterial"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1" />
        </LinearLayout>


        <TableLayout
            android:id="@+id/tl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:stretchColumns="*"
            tools:context=".sitereport">


        </TableLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/more"
            android:onClick="gettable"/>



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <com.nightonke.boommenu.BoomMenuButton
                android:id="@+id/bmb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                app:bmb_buttonEnum="ham"
                app:bmb_buttonPlaceEnum="buttonPlace_ham_3"
                app:bmb_piecePlaceEnum="piecePlace_ham_3" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>